# physical_property

./: .gitignore  CHANGELOG.md  LICENSE  README.md  env.yaml  pyproject.toml
examples/: plot_pressure.py  test_solvent_blend.py
src/: __init__.py  base.py
src/physical_property/: __init__.py  base.py
src/physical_property/properties/: __init__.py  basic.py  dimensionless.py  thermodynamic.py  transport.py
src/physical_property/properties/specialty/: __init__.py  composition.py  gas_oil_ratio.py
src/physical_property/units/: __init__.py  unit_sets.py  unit_utils.py  units.py
src/physical_property/utils/: __init__.py  constants.py  logging.py  shapes.py  z_score.py
src/physical_property/xy_data/: __init__.py  xy_data.py
src/properties/: dimensionless.py  transport.py
src/properties/specialty/: __init__.py  gas_oil_ratio.py
tests/: test_basic.py
tools/codemods/: convert_logging_fstrings.py
