[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "physical_property"
version = "0.3.9-alpha.1"
description = "A package for managing physical properties with unit conversions"
readme = "README.md"
license = "MIT"
authors = ["Caleb Sisco <sisco@ennova.us>"]
homepage = "https://github.com/ENNOVA-LLC/physical_property"
repository = "https://github.com/ENNOVA-LLC/physical_property"

# src-layout packaging
packages = [{ include = "physical_property", from = "src" }]

# don't ship dev dirs
exclude = ["tools/**", "tests/**", "examples/**"]

[tool.poetry.dependencies]
python = ">=3.9"
attrs = "*"
numpy = "*"
scipy = "*"
plotly = "*"
pandas = "^2.3.3"
fpcore = { path = "../fpCore", develop = true }
#fpcore = { git = "https://github.com/ENNOVA-LLC/fpCore.git", branch = "main" } # for testing
#fpcore = { git = "https://github.com/ENNOVA-LLC/fpCore.git", tag = "v0.1.0" } # for stable release
loguru = { version = "^0.7", optional = true }

[tool.poetry.extras]
# enable with: pip install "physical_property[logging]"
logging = ["loguru"]

# dev/test groups (replace with your prefs)
[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
flake8 = "*"
ruff = "*"
pre-commit = "*"

# lint rule to block f-strings in logging calls
[tool.ruff]
select = ["E","F","W","G","PLE1205","PLE1206"]
